// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Peers can be created/edited/deleted: can be created 1`] = `
{
  "data": {
    "createPeer": {
      "hostURL": "https://host-url.ch/",
      "id": Any<String>,
      "isDisabled": false,
      "name": "Create Peer Test",
      "slug": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can be deleted 1`] = `
{
  "data": {
    "deletePeer": Any<Object>,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can be read by id 1`] = `
{
  "data": {
    "peer": {
      "hostURL": "https://host-url.ch/",
      "id": Any<String>,
      "isDisabled": false,
      "name": "Create Peer Test",
      "slug": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can be updated 1`] = `
{
  "data": {
    "updatePeer": {
      "hostURL": "https://new-host-url.ch/",
      "id": Any<String>,
      "isDisabled": false,
      "name": "Updated Peer",
      "slug": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can read peer profile 1`] = `
{
  "data": {
    "peerProfile": {
      "callToActionImage": null,
      "callToActionImageURL": "",
      "callToActionText": [],
      "callToActionURL": "",
      "hostURL": "https://fakeURL",
      "logo": null,
      "name": "",
      "themeColor": "#000000",
      "themeFontColor": "#ffffff",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can update peer profile 1`] = `
{
  "data": {
    "updatePeerProfile": {
      "callToActionImage": null,
      "callToActionImageURL": null,
      "callToActionText": [
        {
          "text": "rich text call to action",
        },
      ],
      "callToActionURL": "calltoactionurl.ch/",
      "hostURL": "https://fakeURL",
      "logo": null,
      "name": "test peer profile",
      "themeColor": "#4287f5",
      "themeFontColor": "#d67c15",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
